test/expected/file-cast_x.out
cast x into
          ^
11: syntax error: "as", "into", or "to" expected
